Infrastructure/Kubernetes/ingress-live-location-configuration.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: live-api-gateway
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: live-location-service
            port:
              number: 80
      - path: /socket.io
        pathType: Prefix
        backend:
          service:
            name: live-location-service
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: live-location-frontend-service
            port:
              number: 80
